--- a/scene.html
+++ b/scene.html
@@ -447,7 +447,7 @@
         font-size: 35px  ;
         line-height: 56px;
 
-        color: black;}
+        color: white;}
 
         p11{
         position: absolute;
@@ -461,7 +461,7 @@
         font-size: 35px  ;
         line-height: 56px;
 
-        color: black;}
+      color: white;}
 
         p9{
         position: absolute;
@@ -475,7 +475,7 @@
         font-size: 25px  ;
         line-height: 38px;
 
-        color: black;
+        color: white;
         }
 
         p10{
@@ -491,8 +491,7 @@
         font-size: 25px  ;
         line-height: 38px;
 
-        color: black;
-        }
+color: white;        }
 
         p12{
         position: absolute;
@@ -507,8 +506,7 @@
         font-size: 25px  ;
         line-height: 38px;
 
-        color: black;
-        }
+color: white;        }
         .scene{
         position: absolute;
         width: 800px  ;
@@ -561,7 +559,7 @@
       color: #FFFFFF;}
 
             h2{position: absolute;
-      width: 650px  ;
+      width: 850px  ;
       height: 138px;
       left: 80px  ;
       top: 960px  ;
@@ -626,61 +624,76 @@
       @media only screen and (min-width: 321px) and (max-width: 768px){
 
      p8{
-       top: 2620px;
+       top: 4920px;
        color: white;
+       font-size: 60px;
+       width: 500px;
      }
      p10{
-       top: 2670px;
-
+       top: 5010px;
+      width: 500px;
+ font-size: 50px;
+ left: 500px;
      }
      p9{
-       top: 2630px;
+       top: 4930px; font-size: 50px;
+        width: 500px;
+        left: 500px;
+
      }
      p11{
-       top: 2620px;
+         width: 500px;
+       top: 4920px;
+       font-size: 60px;
        left: 600px;
+       left: 1060px;
      }
      p12{
-       top: 2620px;
-       left: 800px;
+       top: 4920px;
+       font-size: 50px;
+       left: 1360px;
+       line-height: 48px;
+           width: 500px;
+
      }
      #futer{
-       width: 1080px;
-       top: 2580px;
+       width: 1940px;
+       top: 4850px;
+       border: 16px;
      }
      #boom{
-       top: 2770px;
+       top: 5110px;
      }
      .scene{
      position: absolute;
-     width: 930px;
-     height: 540px;
+     width: 1830px;
+     height: 1120px;
      left: 80px;
-     top: 380px;
+     top: 480px;
          }
 
    .scene2{
    position: absolute;
-   width: 930px;
-   height: 540px;
+   width: 1830px;
+   height: 1120px;
    left: 80px;
-   top: 1200px;
+   top: 2100px;
          }
          .scene3{
    position: absolute;
-   width: 930px;
-   height: 530px;
+   width: 1830px;
+   height: 1120px;
    left: 80px;
-   top: 2000px;
+   top: 3700px;
       }
 
-      h1{top: 130px; left: 260px; font-size: 62px; width: 980px; }
-      h2{top: 950px; left: 60px; width: 1900px; font-size: 62px; }
-      h3{top: 1740px; left: 240px; width: 980px; font-size: 62px; }
+      h1{top: 130px; left: 80px; font-size: 86px; width: 980px; }
+      h2{top: 1650px; left: 80px; width: 1900px; font-size: 86px; }
+      h3{top: 3280px; left: 80px; width: 980px; font-size: 86px; }
 
-      p5{top: 250px; font-size: 26px; left: 80px;}
-      p6{top: 1080px; font-size: 26px; left: 80px;}
-      p7{top: 1880px; font-size: 26px; left: 80px;}
+      p5{top: 300px; font-size: 45px; left: 80px; line-height: 45px; width: 1200px;}
+      p6{top: 1880px; font-size: 45px; left: 80px;line-height: 45px; width: 1200px;}
+      p7{top: 3500px; font-size: 45px; left: 80px;line-height: 45px; width: 1200px;}
 
        .mainlink, .aboutlink, .storelink, .calendarlink, .placeslink{ display: none;
        }
@@ -688,10 +701,10 @@
 
        .logo{
          position: fixed;
-         left: 840px  ;
+         left: 1600px  ;
          top: 50px  ;
-         height: 80px  ;
-         width: 220px  ;
+         height: 110px  ;
+         width: 320px  ;
          z-index: 7;
        }
        .mainlink, .aboutlink, .storelink, .calendarlink .placeslink {display: none;
@@ -702,8 +715,8 @@
          position: fixed;
          top: 40px;
          left: 40px;
-         width: 60px;
-         height: 66px;
+         width: 90px;
+         height: 86px;
          cursor: pointer;
          z-index: 100;
 
@@ -715,18 +728,18 @@
          display: block;
          position: absolute;
          width: 100%;
-         height: 4px;
+         height: 6px;
          background-color: #FF003D;
 
        }
        .menu__btn > span::before {
          content: '';
-         top: -20px;
+         top: -25px;
 
        }
        .menu__btn > span::after {
          content: '';
-         top: 20px;
+         top: 25px;
 
        }
 
@@ -736,7 +749,7 @@
          visibility: hidden;
          top: 0;
          left: 1px;
-         width: 1100px  ;
+         width: 2000px  ;
          height: 100%  ;
          margin: 0  ;
          padding: 150px 0  ;
@@ -749,10 +762,10 @@
        /* элементы меню */
        .menu__item {
          display: block  ;
-         padding: 28px 24px  ;
+         padding: 38px 24px  ;
          color: #FF003D  ;
          font-family: Lovelace  ;
-         font-size: 70px  ;
+         font-size: 110px  ;
          font-weight: 600  ;
          text-decoration: none  ;
          background-color: black  ;
