--- a/ticket.html
+++ b/ticket.html
@@ -6,40 +6,7 @@
     <title></title>
     <style media="screen">
 
-    @media only screen and (max-width: 320px) {
-      .ticket{
-        position: relative;
-        left: -2px!important;
-        top: 600px !important;
-      }
-      h1{
-        position: relative;
-        top: -250px !important;
-        text-align: center;
-        left: 40px !important;
-        font-style: normal;
-font-weight: normal;
-font-size: 50px !important;
-line-height: 70px;
-        font-family: Lovelace;
-        color: #FF003D;
-        width: 820px !important;
-      }
-      .calendarlink{
-        position: relative;
-        top: 560px !important;
-        font-style: normal;
-font-weight: normal;
-font-size: 80px !important;
-line-height: 70px;
-text-decoration: none;
-        font-family: Lovelace;
-        color: #FF003D;
-        left: 250px !important;
-        cursor: pointer;
 
-      }
-    }
 
       .ticket{
         position: relative;
@@ -77,6 +44,59 @@ text-decoration: none;
       .calendarlink:hover{
         color: white;
       }
+
+      @media only screen and (max-width: 320px) {
+        .ticket{
+          position: relative;
+          left: -2px ;
+          top: 600px  ;
+        }
+        h1{
+          position: relative;
+          top: -250px  ;
+          text-align: center;
+          left: 40px  ;
+          font-style: normal;
+  font-weight: normal;
+  font-size: 50px  ;
+  line-height: 70px;
+          font-family: Lovelace;
+          color: #FF003D;
+          width: 820px  ;
+        }
+        .calendarlink{
+          position: relative;
+          top: 560px  ;
+          font-style: normal;
+  font-weight: normal;
+  font-size: 80px  ;
+  line-height: 70px;
+  text-decoration: none;
+          font-family: Lovelace;
+          color: #FF003D;
+          left: 250px  ;
+          cursor: pointer;
+
+        }
+      }
+
+       @media only screen and (min-width: 321px) and (max-width: 768px){
+         .ticket{
+           top: 400px;
+           left: -5px;
+
+         }
+         h1{
+           font-size: 55px;
+           width: 900px;
+         }
+
+         .calendarlink{
+           font-size: 80px  ;
+           top: 380px;
+           left: 250px;
+         }
+       }
     </style>
   </head>
   <body bgcolor="black">
