--- a/about.html
+++ b/about.html
@@ -10,12 +10,12 @@
   <style>
   @font-face {
     font-family: Lovelace;
-    src: url(fonts/Lovelace.ttf);
+    src: url(fonts/Lovelace-Medium.ttf);
    }
 
    @font-face {
      font-family: FuturaLightC;
-     src: url(fonts/FuturaLightC.ttf); 
+     src: url(fonts/FuturaLightC.ttf);
     }
 
 
