--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <style>
   @font-face {
     font-family: Lovelace;
-    src: url(fonts/Lovelace.ttf);
+    src: url(fonts/Lovelace-Medium.ttf);
    }
 
    @font-face {
