--- a/zal.html
+++ b/zal.html
@@ -10,7 +10,7 @@
 
     @font-face {
       font-family: Lovelace;
-      src: url(fonts/Lovelace.ttf);
+      src: url(fonts/Lovelace-Medium.ttf);
      }
 
      @font-face {
