--- a/calendar.html
+++ b/calendar.html
@@ -8,7 +8,7 @@
     <style>
     @font-face {
       font-family: Lovelace;
-      src: url(fonts/Lovelace.ttf);
+      src: url(fonts/Lovelace-Medium.ttf);
      }
 
      @font-face {
