--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 
     @font-face {
       font-family: Lovelace;
-      src: url(fonts/Lovelace.ttf);
+      src: url(fonts/Lovelace-Medium.ttf);
      }
 
      @font-face {
